@@ -5,6 +5,9 @@ o [Enhancement] Three new Spot Builder Criteria
   - User Visited
   - User Bookmarked
 o [Enhancement] Specify number of retries allowed when 503 errors happen during spot finding (change to SpotCriteria).
+o [Enhancement] Specify a filter to SpotCriteria to pare down the list returned.
+o [BugFix] Added photo count to FullUser and SimpleSpot.
+ 
 
 
 Changes from 1.0.0 to 1.1.0
